--- a/src/style/App.css
+++ b/src/style/App.css
@@ -5,7 +5,9 @@ html, body, #root, .App
 
 .App {
     text-align: center;
-    display: grid;
-    grid-template-rows: 40px auto;
+    /* display: grid; */
+    /* grid-template-rows: 40px calc(100% - 40px); */
+
+
     overflow-y: hidden;
 }
