--- a/src/style/TopBar.css
+++ b/src/style/TopBar.css
@@ -1,43 +1,100 @@
 .TopBar
 {
+    position: fixed;
     display: grid;
-    grid-auto-flow: column;
+
+    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-auto-flow: column; */
 
     background-color: rgb(218, 218, 218);
     
     box-shadow: 1px 1px 10px gray;
 
     height: 40px;
+    width: 100vw;
+    z-index: 1;
 }
 
-.PageController
+.TopBar > button
+{
+    background-color: rgb(0, 153, 255);
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 5px;
+
+    width: 100px;
+    height: 30px;
+    color: white;
+
+    outline: none;
+    border: none;
+
+    box-shadow: 1px 1px 1px 1px gray;
+
+    margin: 5px 10px;
+
+    float:left;
+    transition: 200ms;
+}
+
+.TopBar > button:hover
+{
+    background-color: rgb(1, 127, 211);
+    cursor: pointer;
+}
+
+.TopBar > button:active
+{
+    background-color: rgb(3, 118, 196);
+    box-shadow: -1px -1px 1px 1px gray;
+}
+
+.PageController, .PageDisplayController
 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-
-    grid-template-rows: 30px;
-    width: 100px;
+    grid-template-columns: 1fr 1fr;
+    
+    width: 100%;
 
     margin: 0 auto;
 
-    text-align: center;
+    text-align: center; 
 }
 
-.PageController input
+.PageDisplayController form, .PageDisplayController form
+{
+    width: 40px;
+    margin: 5px 0;
+}
+
+.PageController button
+{
+    font-size: 30px;
+
+    border-radius: 5px;
+    padding: 5px;
+    /* border: none; */
+
+    line-height: 1px;
+}
+
+.PageController input, .PageController > form > button
+{
+    float: right;
+    margin: 5px 0;
+}
+
+.PageController input, .PageDisplayController input
 {
     border-radius: 5px;
     font-size: 16px;
     padding: 5px;
 
-    width: 30px;
-    /* height: 30px; */
+    width: 40px;
 
     border: none;
 
     box-shadow: 1px 1px 1px 1px gray;
-
-    margin: 0 auto;
 }
 
 ::placeholder
@@ -45,14 +102,23 @@
     color: black;
 }
 
-.PageController p
+.PageController p, .PageDisplayController p
 {
     padding: 5px;
+    font-size: 16px;
     border-radius: 5px;
 
-    width: 50px;
-
     border: none;
+    height: calc(100% - 2 * 5px);
 
-    margin: 0 auto;
+    margin: 0;
+
+    text-align: left;
+
+    margin: 5px 0;
+}
+
+.PageDisplayController p
+{
+    text-align: right;
 }
