Trying to fix centering

--- a/src/style/Renderer.css
+++ b/src/style/Renderer.css
@@ -16,14 +16,19 @@
     margin: 0 auto;
 }
 
-.Renderer .Document
+.Swipeable
 {
     height: 100%;
+}
 
+.Renderer .Document
+{
+    /* padding: 70px 0; */
+    /* height: 100%; */
     display: grid;
     justify-items: center;
 
-    margin: auto auto;
+    margin: 0 auto;
 
     grid-auto-flow: column;
 }
