--- a/src/style/TopBar.css
+++ b/src/style/TopBar.css
@@ -3,8 +3,8 @@
     position: fixed;
     display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr;
-    /* grid-auto-flow: column; */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+    grid-auto-flow: column;
 
     background-color: rgb(218, 218, 218);
     
