--- a/src/style/TopBar.css
+++ b/src/style/TopBar.css
@@ -1,10 +1,7 @@
 .TopBar
 {
+    color: rgb(80, 80, 80);
     position: fixed;
-    display: grid;
-
-    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-    grid-auto-flow: column;
 
     background-color: rgb(218, 218, 218);
     
@@ -15,8 +12,18 @@
     z-index: 1;
 }
 
-.TopBar > button
+.OpenFile
 {
+    float: left;
+    margin-right: 10px;
+
+   font-size: 10px;
+}
+
+.OpenFileButton
+{
+    /* float: left; */
+
     background-color: rgb(0, 153, 255);
     border-radius: 5px;
     font-size: 16px;
@@ -33,30 +40,36 @@
 
     margin: 5px 10px;
 
-    float:left;
     transition: 200ms;
 }
 
-.TopBar > button:hover
+.OpenFileButton:hover
 {
     background-color: rgb(1, 127, 211);
     cursor: pointer;
 }
 
-.TopBar > button:active
+.OpenFileButton:active
 {
     background-color: rgb(3, 118, 196);
     box-shadow: -1px -1px 1px 1px gray;
+}
+
+.PageDisplayController
+{
+    float: right;
+}
+
+.PageController
+{
+    float: left;
+    margin-left: 10px;
 }
 
 .PageController, .PageDisplayController
 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    
-    width: 100%;
-
-    margin: 0 auto;
 
     text-align: center; 
 }
@@ -99,7 +112,7 @@
 
 ::placeholder
 {
-    color: black;
+    color: rgb(80, 80, 80);
 }
 
 .PageController p, .PageDisplayController p
