--- a/src/style/Menu.css
+++ b/src/style/Menu.css
@@ -17,7 +17,7 @@
     margin: 5px 10px;
 
     float:left;
-    transition: 200ms;
+    transition: 100ms;
 
     background-color: rgb(233, 231, 231);
     width: 40px;
@@ -43,23 +43,73 @@
     height: 60%;
 }
 
-.MenuSideBar
+.Menu
 {
-    position: fixed;
-    height: 100%;
-    width: 0px;
-    opacity: 0;
+    margin-top: 6px;
+    width: 20% !important;
 
-    transition: 200ms;
-
-    background-color: white;
-
-    box-shadow: 1px 1px 10px gray;
-
-    margin-top: 40px;
+    transition: 100ms;
+    /* background-color: rgb(218, 218, 218) !important; */
+    box-shadow: 1px 5px 10px gray !important;
 }
 
-.MenuSideBar header
+.Menu button
+{
+    color: rgb(80, 80, 80);
+
+    background-color: rgb(218, 218, 218);
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 10px;
+
+    width: 90%;
+    height: 100%;
+
+    outline: none;
+    border: none;
+
+    box-shadow: 1px 1px 1px 1px gray;
+
+    margin: 10px;
+
+    transition: 100ms;
+
+    cursor: pointer
+}
+
+.Menu button:hover
+{
+    background-color: rgb(1, 127, 211);
+    color: white;
+}
+
+.Menu button:active
+{
+    background-color: rgb(3, 118, 196);
+    box-shadow: -1px -1px 1px 1px gray;
+    color: white;
+}
+
+#ClearRecentButton
+{
+    background-color: rgb(1, 127, 211);
+    color: white;
+
+    width: 50%;
+}
+
+#ClearRecentButton:hover
+{
+    background-color: rgb(1, 127, 211);
+}
+
+#ClearRecentButton:active
+{
+    background-color: rgb(3, 118, 196);
+    box-shadow: -1px -1px 1px 1px gray;
+}
+
+.Menu header
 {
     margin: 10px;
     color: rgb(0, 153, 255);
