--- a/src/style/Menu.css
+++ b/src/style/Menu.css
@@ -49,7 +49,7 @@
     width: 20% !important;
 
     transition: 100ms;
-    /* background-color: rgb(218, 218, 218) !important; */
+    border-radius: 4px;
     box-shadow: 1px 5px 10px gray !important;
 }
 
@@ -92,7 +92,7 @@
 
 #ClearRecentButton
 {
-    background-color: rgb(1, 127, 211);
+    background-color: rgb(194, 60, 60);
     color: white;
 
     width: 50%;
@@ -100,12 +100,12 @@
 
 #ClearRecentButton:hover
 {
-    background-color: rgb(1, 127, 211);
+    background-color: rgb(161, 51, 51);
 }
 
 #ClearRecentButton:active
 {
-    background-color: rgb(3, 118, 196);
+    background-color: rgb(114, 34, 34);
     box-shadow: -1px -1px 1px 1px gray;
 }
 
@@ -113,4 +113,15 @@
 {
     margin: 10px;
     color: rgb(0, 153, 255);
+}
+
+.Line
+{
+    height: 1px;
+    color: rgb(202, 202, 202);;
+    background: rgb(202, 202, 202);
+
+    margin: 30px auto;
+
+    width: 70%;
 }
