--- a/src/css/TopBar.css
+++ b/src/css/TopBar.css
@@ -91,6 +91,13 @@
     line-height: 1px;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none; 
+    margin: 0; 
+}
+
+
 .PageController input, .PageController > form > button
 {
     float: right;
