--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -57,7 +57,7 @@
 {
     color: rgb(80, 80, 80);
 
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(228, 228, 228);
     border-radius: 5px;
     font-size: 16px;
     padding: 10px;
@@ -79,15 +79,15 @@
 
 .Menu button:hover
 {
-    background-color: rgb(1, 127, 211);
-    color: white;
+    background-color: rgb(207, 207, 207);
+    /* color: white; */
 }
 
 .Menu button:active
 {
-    background-color: rgb(3, 118, 196);
+    background-color: rgb(177, 177, 177);
     box-shadow: -1px -1px 1px 1px gray;
-    color: white;
+    /* color: white; */
 }
 
 #ClearRecentButton
